--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,11 @@ body {
     box-shadow: inset rgba(0, 0, 0, 0.5) -6px 4px 2px;
 }
 
+.tool > img {
+    width: 30px;
+    height: 30px;
+}
+
 .canvas-wrapper {
     width: 100%;
     height: 100%;
