--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,14 @@ body {
 }
 
 .canvas-wrapper {
+    position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+}
+
+#canvas {
+    position: absolute;
+    left: 0px;
+    top: 0px;
 }
